update artcles home
update artcles home

--- a/index.html
+++ b/index.html
@@ -5606,7 +5606,7 @@ only 1 in 10 adults eat the recommended daily serving of fruits & veggies?</p>
 </div>
 
 
-<iframe src="best.html" title="description" style="width:100%; height: 900px; border:solid red;margin:0 auto; "></iframe>   
+<iframe src="best.html" title="description" style="width:100%; height: 900px; border:solid red;"></iframe>   
 
 
 <div id="shopify-section-template--15761723555997__164249911856ee15b7" class="shopify-section">
