--- a/index.html
+++ b/index.html
@@ -8982,7 +8982,7 @@ $(window).on('load', function() {
                },
                "image": {
                  /*"src": "img/github.svg",*/
-                 "src": "./img/Pinnacle_fondo.png",
+                 "src": "https://thetermuxchoice.github.io/Pinnacledistro/img/Pinnacle_fondo.png",
                  "width": 100,
                  "height": 100
                }
