update css home
update css home

--- a/index.html
+++ b/index.html
@@ -2790,7 +2790,7 @@ for (var attr in meta) {
     <div class="grid-x align-center product-carousel-section-template--15761723588765__16413248280531e94c" id="">
       <div class="cell small-12">
         <section  style="text-align: center; /*min-height: 80vh;/margin: 0;padding: 0;">
-          <link href="../1-templates/olipop/assets.website-files.com/625096674843ef99b41c4b59/css/olipop-homepage-reimagination.webflow.e6d421bde.css" rel="stylesheet" type="text/css"/>
+          <link href="css/olipop-homepage-reimagination.webflow.e6d421bde.css" rel="stylesheet" type="text/css"/>
           <style>
             /*--------------------------------
             Noise / Grain Styles
