--- a/index.html
+++ b/index.html
@@ -2790,7 +2790,7 @@ for (var attr in meta) {
     <div class="grid-x align-center product-carousel-section-template--15761723588765__16413248280531e94c" id="">
       <div class="cell small-12">
         <section  style="text-align: center; /*min-height: 80vh;/margin: 0;padding: 0;">
-          <link href="css/olipop-homepage-reimagination.webflow.e6d421bde.css" rel="stylesheet" type="text/css"/>
+
           <style>
             /*--------------------------------
             Noise / Grain Styles
@@ -8982,7 +8982,7 @@ $(window).on('load', function() {
                },
                "image": {
                  /*"src": "img/github.svg",*/
-                 "src": "https://thetermuxchoice.github.io/Pinnacledistro/img/Pinnacle_fondo.png",
+                 "src": "./img/Pinnacle_fondo.png",
                  "width": 100,
                  "height": 100
                }
