update section articles
update section articles

--- a/index.html
+++ b/index.html
@@ -2786,7 +2786,7 @@ for (var attr in meta) {
 <div id="shopify-section-template--15761723588765__16413248280531e94c" class="shopify-section"> 
   <div class="hero-divider" style="height: 86px;">
     <svg preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 201">
-    <path d="M1440 200.98V0L0 81.935V200.98z" fill="#212121" fill-rule="evenodd"></path>
+    <path d="M1440 200.98V0L0 81.935V200.98z" fill="#ffc520" fill-rule="evenodd"></path>
     </svg>
 </div>
   <section class="mfr-core__product-carousel background" id="particles-js" style="text-align: center;background: linear-gradient(#ffc31a, rgb(233 255 212));">
@@ -8646,8 +8646,8 @@ $(window).on('load', function() {
                "random": true,
                "anim": {
                  "enable": false,
-                 "speed": 40,
-                 "size_min": 10,
+                 "speed":30,
+                 "size_min": 30,
                  "sync": false
                }
              },
@@ -8662,7 +8662,7 @@ $(window).on('load', function() {
                "enable": true,
                "speed": 0.5,
                "direction": "right",
-               "random": true,
+               "random": false,
                "straight": false,
                "out_mode": "bounce",
                "bounce": false,
