--- a/testimonial/index.html
+++ b/testimonial/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Testimonial Carousel with Flickity</title>
+  <title>CBD Products | Highest Quality Hemp and CBD | Pinnacle Hemp</title>
   <meta name="viewport" content="width=device-width"><link rel='stylesheet' href='//cdnjs.cloudflare.com/ajax/libs/flickity/1.0.0/flickity.min.css'>
 <link rel="stylesheet" href="./style.css">
 
